# fairplay-simulation-lab

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  vercel.json
.streamlit/: config.toml
api/: README.md  app.py  hub.py  room.py
backend/: Dockerfile  README.md  requirements.txt
data/: devices.json  players.json  (+10 more)
playsim/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
playsim/analysis/: build_dashboard_data.py  build_sweep_explorer.py  fit_sensitivity_sweep.py  room_policy_comparison.py  scoring_sensitivity_sweep.py  sweep_explorer_template.html
playsim/experiments/: standard-vs-fairplay-liveness-agentic.json
playsim/playsim/: __init__.py  agent.py  agentic.py  arrivals.py  baselines.py  behavior.py  calibrate.py  calibration.json  cli.py  equity.py  features.py  fixture_paths.py  hand_export.py  health.py  interactive.py  knobs.py  large_room_fixture.py  large_room_sweep.py  phh.py  policies.py  population.py  population_run.py  room.py  room_export.py  rosters.py  router_adapter.py  runner.py  service.py  store.py  table.py
playsim/tests/: test_agentic.py  test_arrivals.py  test_behavior.py  test_dashboard_data.py  test_determinism.py  test_interactive.py  test_large_room_fixture.py  test_large_room_sweep.py  test_policies.py  test_population.py  test_room.py  test_room_adapter.py  test_room_compare.py  test_room_export.py  test_runner_extraction.py  test_scoring_sensitivity_sweep.py  test_smoke.py
(+350 files in other folders)
