[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "playsim"
version = "0.1.0"
description = "FairPlay play-simulation engine — archetype agents on PokerKit (deterministic, replayable)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pokerkit==0.7.4",
]

[project.optional-dependencies]
# V2 external baseline brains (solver-like grinder via CFR/RL)
baselines = ["rlcard[torch]>=1.2.0"]
dev = ["pytest>=8"]

[project.scripts]
playsim = "playsim.cli:main"

[tool.setuptools.packages.find]
include = ["playsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
